<resources>
    <string name="app_name">Escaner QR</string>
    <string name="todo">TODO</string>

    <string name="esc_ner_de_c_digos_qr">DEPARTAMENTO DE TECNOLOGÍA</string>
    <string name="responsable_del_mapeo_de_c_digos">Oficina:</string>
    <string name="usuario">Usuario:</string>

    <string name="escanear">Escanear</string>
    <string name="seleccione_el_tipo_de_etiqueta">Seleccione el tipo de etiqueta</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="tipo_de_etiqueta">Tipo de etiqueta:</string>
    <string name="salir">Salir</string>
    <string name="textview">TextView</string>
    <string name="regresar">Regresar</string>
    <string name="salir2">Salir</string>
    <string name="responsable">Responsable:</string>
    <string name="textviww">TextView</string>
    <string name="resultado"></string>
    <string name="enviar_archivo">Terminar</string>
    <string name="guardar_informacion">Guardar</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="regi_n">Región:</string>
    <string name="ingres_la_siguiente_informaci_n">Ingrese Usuarios y Oficina</string>
    <string name="usuario_1">Usuario 1:</string>
    <string name="usuario_2">Usuario 2</string>
    <string name="usuario_3">Usuario 3:</string>
    <string name="checkbox">CheckBox</string>
    <string name="TxtTitulo">Escaner de Códigos QR</string>
    <string name="TxtDerechos">©2021 Patronato Nacional de la Infancia. Derechos reservados\n\nVersion: 1.0.0</string>
    <string name="image33">TODO</string>
    <string name="TxtVersion">Versión 1.0</string>
    <string name="button">Button</string>
    <string name="TxtCantida">Cantidad de activos escaneados:</string>
    <string name="txtNumero"></string>
    <string name="txtResultado">Resultado del escaner:</string>
    <string name="divider4"></string>
    <string name="enviar_archivo_csv_por_correo">Enviar Archivo por Correo</string>
    <string name="nombre_del_archivo">Nombre del Archivo:</string>
    <string name="textviewa"></string>
    <string name="observaciones">Observaciones:</string>
    <string name="txtmult">txtmult</string>
    <string name="seleccione_un_correo">Correo:</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Salir...</string>
    <string name="enviar">Enviar</string>
    <string name="salirf">Salir</string>
    <string name="enviar_otro_archivo_por_correo">Enviar otro Archivo por Correo</string>
    <string name="textview333">TextView</string>
    <string name="buttonEn">Examinar...</string>
    <string name="btnexaminar">Examinar...</string>
    <string name="txtArchivo">Archivo...</string>
    <string name="cancelar33">Regresar</string>
    <string name="enviar332">Enviar</string>

    <string name="strinusuarios">Agregar Usuarios</string>
    <string name="agreregion">Agregar Regiones </string>
    <string name="enviarotroCorreo">Enviar archivo adjunto</string>
    <string name="infovers">Acerca de...</string>
    <string name="agrerofic">Agregar Oficinas</string>
    <string name="title_activity_principal">principal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textviewspc"></string>
    <string name="imag">TODO</string>
    <string name="observaciones1">Observaciones:</string>
    <string name="agregar_nuevo_usuario1">Agregar Nuevo Usuario</string>
    <string name="digite_el_nombre_completo_del_usuario">Digite el nombre completo del usuario:</string>
    <string name="agregar_usuario2">Agregar</string>
    <string name="regresar2">Regresar</string>
    <string name="eliminar_lista_de_usuarios3">Eliminar</string>
    <string name="regi_n1">Región: </string>
    <string name="agregar_nueva_oficina1">Agregar Nueva Oficina</string>
    <string name="digite_el_nombre_de_la_oficina12">Digite el nombre de la Oficina</string>
    <string name="regresar78">Regresar</string>
    <string name="agregar_oficina">Agregar Oficina</string>
    <string name="oficinag">Oficina:</string>
    <string name="salirr">Salir...</string>
    <string name="txtpunto">.</string>
    <string name="editTextofinci">.</string>
    <string name="edittexp">.</string>
    <string name="salirusuar">Salir...</string>
    <string name="agregar_nueva_regi_nni">Agregar Nueva Región</string>
    <string name="txtpregi">.</string>
    <string name="digite_el_nombre_de_la_regi_nno">Digite el nombre de la Región:</string>
    <string name="regresarrrs">Regresar</string>
    <string name="agregar_regi_n3">Agregar Región</string>
    <string name="salirtxtre">Salir...</string>
    <string name="regresarbtn12">Regresar...</string>
    <string name="salirtxb">Salir...</string>

</resources>