<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1DAE2">




    <!-- A CardView that contains a TextView -->


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@color/Pani1"

        android:fitsSystemWindows="false"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="103dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="233dp"
                android:layout_height="53dp"
                android:layout_gravity="center"

                android:layout_marginTop="4dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_pani2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/esc_ner_de_c_digos_qr"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center">


            <!-- A CardView that contains a TextView -->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="13dp"
                app:contentPadding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textV4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="start"
                        android:text="@string/enviar_archivo_csv_por_correo"
                        android:textColor="@color/TextColor4"
                        android:textSize="17sp" />

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/TextColor4" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="start"
                        android:layout_marginTop="16dp"
                        android:text="@string/nombre_del_archivo"
                        android:textColor="@color/TextColor4"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"

                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/textviewa"
                        android:textColor="@color/TextColor4"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textColor="@color/TextColor4"
                        android:textSize="14sp"
                        android:text="@string/observaciones1"
                                                />

                    <EditText
                        android:id="@+id/editTextTextMultiLine"
                        android:layout_width="match_parent"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:hint="@string/txtpunto"
                        android:textSize="14sp"
                        android:importantForAutofill="no" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button3"
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"

                            android:background="#D0D7E3"
                            android:text="@string/enviar"
                            android:textColor="@color/TextColor4"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/btnRegresarcor"
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="#D0D7E3"
                            android:onClick="regre"
                            android:text="@string/regresarbtn12"
                            android:textColor="@color/TextColor4"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button4"
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"

                            android:background="#D0D7E3"
                            android:text="@string/cancelar"
                            android:textColor="@color/TextColor4"
                            android:textSize="12sp" />

                    </LinearLayout>






                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#728695"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>