<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon1"
    tools:context=".MainActivity3">


    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@android:color/white"
        app:flashButtonVisible="true"
        app:frameAspectRatioHeight="2"
        app:frameAspectRatioWidth="3"
        app:frameColor="@android:color/white"
        app:frameCornersRadius="0dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.70"
        app:frameThickness="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maskColor="#77000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="380dp"
            android:layout_height="344dp">


            <androidx.cardview.widget.CardView

                android:id="@+id/card_view"
                android:layout_width="378dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                app:cardCornerRadius="13dp"

                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="538dp">

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.budiyev.android.codescanner.CodeScannerView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="13dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:scrollbars="vertical"
                android:text="@string/resultado"
                android:textSize="13sp"
                android:layout_marginTop="26dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:gravity="center"
                android:text="@string/txtResultado"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="13dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
               android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/TxtCantida"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="55dp"
                    android:layout_height="39dp"
                    android:gravity="center"

                    android:text="@string/txtNumero"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"

                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarStyle"
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="#D0D7E3"
                    android:text="@string/guardar_informacion"
                    android:textColor="@color/TextColor4"
                    android:textSize="12sp" />

                <Button
                    style="?android:attr/buttonBarStyle"
                    android:id="@+id/button2"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#D0D7E3"
                    android:text="@string/cancelar"
                    android:layout_weight="1"
                    android:textColor="@color/TextColor4"
                    android:textSize="12sp" />

                <Button
                    style="?android:attr/buttonBarStyle"
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#D0D7E3"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:text="@string/enviar_archivo"
                    android:textColor="@color/TextColor4"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>